--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abhi1992/node_demo.git"
+    "url": "https://github.com/imrealashu/Polls-Application.git"
   },
   "author": "",
   "license": "ISC",
